--- a/.dockerignore
+++ b/.dockerignore
@@ -5,7 +5,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # Build outputs
-dist
+# dist - commented out to allow copying pre-built dist to Docker
 build
 
 # Environment files
